--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,16 @@ __recovery/
 
 # Boss dependency manager vendor folder https://github.com/HashLoad/boss
 modules/
+
+**/Android/Debug
+**/Android/Release
+**/Android64/Debug
+**/Android64/Release
+**/iOSDevice64/Debug/
+**/iOSDevice64/Release/
+**/OSX64/Debug/
+**/OSX64/Release/
+**/Win32/Debug/
+**/Win32/Release/
+**/Win64/Debug/
+**/Win64/Release/
